- knapsack constraint handler is now able to pairwise presolving constraints
- "negated cliques" (1<=i<=n : sum (x_i) >= n-1) were added and we are using them now inside the knapsack constraint 
  handler, the cliquepartitioning which is returned by SCIPcalcCliquePartition contains now integer != 0, negatives ones
  indicates a negated clique and positive ones indicates a normal clique

performance improvements:
- improved settings/emphasis/cpsolver.set to decrease time per node
- reworked access to pseudo solution and inference value of variables in order to reduce function calls
- improved zerohalf cut separator: more than one delta is tested for MIR cuts, better handling of dense base inequalities, 
  faster scaling of fractional coefficients in rows (now enabled), improved parameter settings (presolving)   

fixed bugs:
- fixed bug in lpi_clp.cpp: SCIPlpiChgBounds checks if the column status exists in Clp before using it
- fixed bug concerning assert(!SCIPlpDivingObjChanged(lp)) which was caused by wrong infinity double parameters for cplex
- fixed bug in reader_zpl.c which appeared using the parameter "reading/zplreader/parameters" 
- fixed bug in trivial heuristic: the locking solution might have falsely initialized some values to zero
- fixed bug in cons_setppc: aggregated variables were not correctly removed in presolving
- fixed bug in cons_linear.c: binary variables should not be multi-aggregated
- fixed bug in tree.c: propagate implications on multi-aggregated should not be performed 
- fixed bugs in flatzinc readers with constraints that exclusively consist of constants
- fixed bug in reader_gms: correct handling of nonstandard bounds on general integer variables
- fixed bug in conflict.c in the method conflictsetAddBound() 
- fixed "bug" in projects Makefiles w.r.t. "make clean"
- fixed bugs in solve.c: even with LP solving disabled, the root LP was solved in case continous variables are 